# NCCL_Simgrid_simulator

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  format.sh
cuda/: CMakeLists.txt  cudaRuntime_original.h.txt  cuda_graph.cpp  cuda_runtime.cpp  gpu_activity.cpp  internal.cpp  platform.cpp  tracer.cpp
cuda/include/: cuda.h  cuda_error.h  cuda_runtime.h  gpu_activity.h  internal.h  platform.h  tracer.h
doc/: bib.bib  main.tex
doc/nccl-tests-results/: nccl_2_gpu_tesla.out  nccl_bcast2.out  nccl_g1.out  nccl_gather.out  nccl_sendrecv.out  rccl_i_tests.out  rccl_i_tests_2.out  rocmbandwidth.test  simulated_2gpu_send_recv_100_iterations  simulated_2gpu_send_recv_10_iterations
nccl/: CMakeLists.txt  coll.cpp  nccl.cpp  nccl_internal.cpp
nccl/include/: coll.h  nccl.h  nccl_internal.h  util.h
tests/: CMakeLists.txt  main_test.cpp
